--- a/README
+++ b/README
@@ -36,11 +36,6 @@ The inlink_ads_data method creates an instance variable called +@links+ that con
 Somewhere in your +Page+ controller or your +Application+ controller, place the following:
 
   class ApplicationController < ActionController::Base
-		# This action should be placed where the root URL gets routed to in your application
-		def index
-			render_sync_posts
-		end
-
     private
 
     def read_posts(last, limit)
@@ -56,13 +51,12 @@ Somewhere in your +Page+ controller or your +Application+ controller, place the 
     end
   end
   
-The InLinkAds service will make a GET request of your site and pull the posts described by the methods above.  If your posts (or pages) are stored in a different model than "Post" then change the above to match your setup.  The important methods to define are:
+The InLinkAds service will make a GET request of your site and pull the posts described by the methods above.  If your posts (or pages) are st
+ored in a different model than "Post" then change the above to match your setup.  The important methods to define are:
 
   * +read_posts+ - Returns posts starting with +last+ and returning a total of no more than +limit+
   * +post_url+ - Returns the URL to the page for +post+
   * +max_post_id+ - Returns the last id of posts
-
-Also, in your +Post+ model, make sure to have a method called +body+, where the plugin will read the content to be stored and linked to from the service.
   
 == Install the configuration
 
